doc/grammar.txt
program -> statement*

statement -> declaration | assignment | return_statement

declaration -> "int" identifier ";"
assignment -> identifier "=" expression ";"
return_statement -> "return" expression ";"

expression -> term (( "+" | "-" ) term)*
term -> factor (( "*" | "/" ) factor)*
factor -> number | identifier | "(" expression ")"

identifier -> [a-zA-Z_][a-zA-Z0-9_]*
number -> [0-9]+
